feat: MultiNIC support - Part IV
This is a squash of the following changes:

Ia6d8c91921a0b613cb752a751b3dda96a329c145
I64e8fb2d264f4e7a1515f33d15fddda0d5f57db6
Ibde2ff1fa71a81059565dc7a4733da6e2b5b91d6
I1444a1869239343eb5174e32272012bc800e5b3b
I6131aa568231f46225f5882f76c82313ddcd3f87
I75e36ce895a3fa6598a09c7cda6e8ffb58b9fc96
Icf2a2bf9629d79761782bd3c2ce3c9fa89d5f42f
I54b0324f1be61f07cc4b2e2d69232f0c9bceb584
I4f75eae04a5fa8428b2ceec2494259181c3e6d6d

Bug: b/350533499
Carry-Patch-Approval: b/350533499
Presubmit-Component-Override: 32.2.0
Reviewed-on: https://gke-internal-review.googlesource.com/c/third_party/cilium/+/1093203
Unit-Verified: Prow_Bot_V2 <425329972751-compute@developer.gserviceaccount.com>
Lint: Lint 🤖 <android-build-ayeaye@system.gserviceaccount.com>
Tested-by: Prow_Bot_V2 <425329972751-compute@developer.gserviceaccount.com>
Reviewed-on: https://gke-internal-review.googlesource.com/c/third_party/cilium/+/1201876
Louhi-Verified: Louhi_Bot <louhi-gerrit-proxy@google.com>
