# api/v1/openapi.yaml
@@ -1529,6 +1529,15 @@ definitions:
         description: >
           Enables multicast traffic for Endpoint.
         type: boolean
+      disable-smac-verification:
+        description: >
+          Disable source MAC verification for the endpoint.
+        type: boolean
+      network-id:
+        description: >
+          NetworkID identifies the network in the Google multinic context. It is configured for L3 multinic devices only.
+        type: integer
+        format: uint32
   EndpointStatus:
     description: The current state and configuration of the endpoint, its policy & datapath, and subcomponents
     type: object
